--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -234,7 +234,7 @@ li:hover {
 	width: 100%;
 
 }
-.login{
+main{
 	width: 65%;
 	margin: auto;
 	text-align: center;
@@ -262,7 +262,7 @@ li:hover {
 	display:flex;
 }
 
-#contact input {
+#email, #password {
 	height: 50px;
 	width: 379px;
 	font-size: 1.2em;
