--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -136,6 +136,7 @@ table {
 }
 
 /** end reset css**/
+
 body {
 	max-width: 1140px;
 	margin: auto;
@@ -173,7 +174,7 @@ h2 {
 	font-family: 'Syne';
 	font-weight: 700;
 	font-size: 30px;
-	color: #1D6154
+	color: #1D6154;
 }
 
 nav ul {
@@ -201,8 +202,8 @@ li:hover {
 
 #introduction img {
 	display: block;
-	margin: auto;
-	width: 80%;
+	width: 90%;
+
 }
 
 #introduction article {
@@ -219,7 +220,6 @@ li:hover {
 
 #portfolio h2 {
 	text-align: center;
-	margin-bottom: 1em;
 }
 
 .gallery {
@@ -234,14 +234,15 @@ li:hover {
 	width: 100%;
 
 }
-main{
+
+main {
 	width: 65%;
 	margin: auto;
-	text-align: center;
 	display: flex;
 	flex-direction: column;
 
 }
+
 #contact {
 	width: 65%;
 	margin: auto;
@@ -259,10 +260,11 @@ main{
 	text-align: left;
 	margin-top: 30px;
 	flex-direction: column;
-	display:flex;
+	display: flex;
 }
 
-#email, #password {
+#email,
+#password {
 	height: 50px;
 	width: 379px;
 	font-size: 1.2em;
@@ -295,7 +297,7 @@ input[type="submit"] {
 }
 
 input:focus {
-	outline:none;
+	outline: none;
 }
 
 footer nav ul {
@@ -345,4 +347,160 @@ a {
 
 #no-underline:hover {
 	color: #B1663C;
+}
+
+
+
+.project {
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: row;
+}
+
+
+
+.mode-edition{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 22%;
+	flex-direction: row;
+	margin-top:15px;
+	margin-bottom: 19px;
+}
+
+.modifier{
+	cursor: pointer;
+	color: rgb(0, 0, 0);
+	border: none;
+	background-color: rgb(255, 255, 255);
+	font-family: Work Sans;
+	font-size: 14px;
+	font-weight: 400;
+	text-align: center;
+}
+
+
+.banner {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: black;
+	height: 59px;
+	width: 1440px;
+	margin-left: -150px;
+}
+
+.publish {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: black;
+	height: 38px;
+	width: 216px;
+	border-radius: 60px;
+	margin-left: 20px;
+	border: none;
+}
+.modal-btn-white{
+	cursor: pointer;
+	color: white;
+	border: none;
+	background-color: black;
+	font-family: Work Sans;
+	font-size: 16px;
+	font-weight: 400;
+	text-align: center;
+}
+
+.edition-white{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 16px;
+	margin-right:12px;
+	cursor: pointer;
+}
+
+.edition-black{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 14px;
+	margin-right:12px;
+	cursor: pointer;
+}
+
+.modal-container {
+	visibility: hidden;
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	background-color: #0000004d;
+}
+
+.modal-container.active {
+	/* display: block; */
+	visibility: visible;
+}
+
+.overlay {
+	opacity: 0;
+	position: absolute;
+	height: 100vh;
+	width: 100vw;
+}
+
+
+.modal {
+	opacity: 0;
+	max-width: 500px;
+	min-width: 300px;
+	height: 731px;
+	width: 630px;
+	left: 50%;
+	top: 50%;
+	padding: 30px;
+	background: #fff;
+	border-radius: 10px;
+	position: absolute;
+}
+
+.modal-container.active .modal {
+	opacity: 1;
+	transform: translate(-50%, -50%);
+}
+
+.close-modal {
+	padding: 8px 10px;
+	border: none;
+	border-radius: 5px;
+	font-size: 18px;
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	cursor: pointer;
+	background-color: #fff;
+	color: #000000;
+}
+
+.modal h1 {
+	margin-bottom: 10px;
+	font-weight: 500;
+	font-family: Work Sans;
+	font-size: 26px;
+	font-weight: 400;
+	line-height: 30px;
+	letter-spacing: 0em;
+	text-align: center;
+	color: black;
+
+}
+
+.trait {
+	width: 500px;
+	border: 1px solid #B3B3B3;
 }
