--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -111,6 +111,7 @@ body {
 	line-height: 1;
 }
 
+
 ol,
 ul {
 	list-style: none;
@@ -177,6 +178,20 @@ h2 {
 	color: #1D6154;
 }
 
+.login-title {
+	margin-left: 250px;
+}
+
+.mdp {
+	margin-left: 250px;
+}
+
+.erreur-msg {
+	margin-left: 40px;
+	color: rgb(212, 37, 37);
+	font-weight: 600;
+}
+
 nav ul {
 	display: flex;
 	align-items: center;
@@ -200,10 +215,9 @@ li:hover {
 	flex: 1
 }
 
-#introduction img {
+.girl-picture {
 	display: block;
 	width: 90%;
-
 }
 
 #introduction article {
@@ -306,6 +320,7 @@ footer nav ul {
 	margin: 2em
 }
 
+
 .allBtn {
 	display: flex;
 	align-items: center;
@@ -337,7 +352,6 @@ footer nav ul {
 
 a {
 	display: flex;
-	justify-content: center;
 	color: black;
 }
 
@@ -351,39 +365,11 @@ a {
 
 
 
-.project {
-display: flex;
-justify-content: center;
-align-items: center;
-flex-direction: row;
-}
 
 
-
-.mode-edition{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 22%;
-	flex-direction: row;
-	margin-top:15px;
-	margin-bottom: 19px;
-}
-
-.modifier{
-	cursor: pointer;
-	color: rgb(0, 0, 0);
-	border: none;
-	background-color: rgb(255, 255, 255);
-	font-family: Work Sans;
-	font-size: 14px;
-	font-weight: 400;
-	text-align: center;
-}
-
-
+/* Banner + publier les changements */
 .banner {
-	display: flex;
+	display: none;
 	justify-content: center;
 	align-items: center;
 	background: black;
@@ -403,33 +389,84 @@ flex-direction: row;
 	margin-left: 20px;
 	border: none;
 }
-.modal-btn-white{
+
+/* Mode edition top */
+.mode-edition-top {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: row;
+}
+
+.text-top {
 	cursor: pointer;
 	color: white;
 	border: none;
 	background-color: black;
 	font-family: Work Sans;
-	font-size: 16px;
+	font-size: 15px;
 	font-weight: 400;
 	text-align: center;
 }
 
-.edition-white{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 16px;
-	margin-right:12px;
+.logo-top {
+	height: 19px;
+	margin-right: 12px;
 	cursor: pointer;
 }
 
-.edition-black{
+/* Modifier */
+.modifier-container {
+	display: none;
+	justify-content: center;
+	align-items: center;
+	width: 28%;
+	flex-direction: row;
+	margin-top: 15px;
+	margin-bottom: 19px;
+}
+
+.modifier {
+	display: flex;
+	cursor: pointer;
+	color: rgb(0, 0, 0);
+	border: none;
+	background-color: rgb(255, 255, 255);
+	font-family: Work Sans;
+	font-size: 14px;
+	font-weight: 400;
+	text-align: center;
+}
+
+.logo-black {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	height: 14px;
-	margin-right:12px;
+	margin-right: 12px;
 	cursor: pointer;
+}
+
+/* modifier projets */
+.projets-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: row;
+}
+
+.modifier-projets-container {
+	display: none;
+	justify-content: center;
+	align-items: center;
+	flex-direction: row;
+	margin-left: 31px;
+}
+
+/* MODALE 1*/
+.projets-photos {
+	width: 100%;
+	height: 75%;
 }
 
 .modal-container {
@@ -439,11 +476,123 @@ flex-direction: row;
 	left: 0;
 	height: 100%;
 	width: 100%;
-	background-color: #0000004d;
+	background-color: #4646464d;
 }
 
 .modal-container.active {
-	/* display: block; */
+	visibility: visible;
+}
+
+.overlay {
+	opacity: 0;
+	position: absolute;
+	height: 100vh;
+	width: 100vw;
+}
+
+
+.modal {
+	opacity: 0;
+	height: 731px;
+	width: 630px;
+	left: 50%;
+	top: 50%;
+	padding: 30px;
+	background: #fff;
+	border-radius: 10px;
+	position: absolute;
+}
+
+.modal-container.active .modal {
+	opacity: 1;
+	transform: translate(-50%, -50%);
+}
+
+.close-modal {
+	padding: 8px 10px;
+	border: none;
+	font-size: 18px;
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	cursor: pointer;
+	background-color: #fff;
+	color: #000000;
+}
+
+.modal h1 {
+	margin-bottom: 10px;
+	font-weight: 500;
+	font-family: Work Sans;
+	font-size: 26px;
+	font-weight: 400;
+	line-height: 30px;
+	letter-spacing: 0em;
+	text-align: center;
+	color: black;
+
+}
+
+.delete-gallery {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #D65353;
+	font-family: Syne;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 17px;
+	letter-spacing: 0em;
+	text-align: center;
+
+}
+
+.addpicture {
+	display: block;
+	margin: 24px auto;
+	background-color: #1D6154;
+	border-radius: 60px;
+	border: none;
+	color: white;
+	font-family: 'Syne';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 17px;
+	cursor: pointer;
+	height: 36px;
+	width: 237px;
+	border-radius: 60px;
+
+}
+
+.trait-container{
+	display: flex;
+	justify-content: center;
+	width: 100%;
+}
+.trait {
+	display: flex;
+	width: 420px;
+	height: 0px;
+	left: 510px;
+	top: 1229px;
+	border: 1px solid #B3B3B3;
+}
+
+/* MODALE 2
+
+.modal-container2 {
+	visibility: hidden;
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	background-color: #4646464d;
+}
+
+.modal-container.active {
 	visibility: visible;
 }
 
@@ -477,7 +626,6 @@ flex-direction: row;
 .close-modal {
 	padding: 8px 10px;
 	border: none;
-	border-radius: 5px;
 	font-size: 18px;
 	position: absolute;
 	top: 10px;
@@ -500,7 +648,15 @@ flex-direction: row;
 
 }
 
+.delete-galerry {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #D65353;
+}
+
+
 .trait {
 	width: 500px;
 	border: 1px solid #B3B3B3;
-}
+} */
