--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -464,9 +464,35 @@ a {
 }
 
 /* MODALE 1*/
-.projets-photos {
-	width: 100%;
-	height: 75%;
+
+.logobin {
+	position: absolute;
+	right: 5%;
+	top: 5%;
+}
+
+figcaption {
+	color: black
+}
+
+.img-container {
+	margin-top: 46px;
+	display: flex;
+	flex-direction: row;
+	width: 70%;
+	flex-wrap: wrap;
+	height: 400px;
+	justify-content: space-between;
+}
+
+.img-modal {
+	height: 104.07979583740234px;
+	width: 78.12284851074219px;
+}
+
+.element-modal {
+	position: relative;
+	height: 120px;
 }
 
 .modal-container {
@@ -501,6 +527,9 @@ a {
 	background: #fff;
 	border-radius: 10px;
 	position: absolute;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .modal-container.active .modal {
@@ -521,6 +550,7 @@ a {
 }
 
 .modal h1 {
+	margin-top: 40px;
 	margin-bottom: 10px;
 	font-weight: 500;
 	font-family: Work Sans;
@@ -566,11 +596,12 @@ a {
 
 }
 
-.trait-container{
+.trait-container {
 	display: flex;
 	justify-content: center;
 	width: 100%;
 }
+
 .trait {
 	display: flex;
 	width: 420px;
