--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -675,6 +675,7 @@ figcaption {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	position: relative;
 }
 
 .ajout-picture p {
@@ -689,13 +690,13 @@ figcaption {
 	margin-bottom: 19px;
 }
 
-.ajout-picture img {
+.icon-picture{
 	margin-top: 28px;
 	height: 46px;
 	width: 58px;
 }
 
-.addpic {
+.label-addpic {
 	margin-top: 31px;
 	display: flex;
 	align-items: center;
@@ -711,14 +712,15 @@ figcaption {
 	line-height: 16px;
 }
 
+.input-addpic{
+	visibility: hidden;
+}
+
 .form-container {
 	display: flex;
 	flex-direction: column;
 }
 
-.btn-hidden {
-	visibility: hidden;
-}
 
 .form-container label {
 	color: black;
@@ -732,7 +734,7 @@ figcaption {
 	margin-bottom: 10px;
 }
 
-.form-container input {
+.form-container input{
 	height: 51px;
 	width: 420px;
 	background: #FFFFFF;
@@ -748,4 +750,19 @@ figcaption {
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 	border:none;
 
+}
+
+.preview-image{
+	visibility: hidden;
+	position: absolute;
+	width: 200px;
+	height: 194px;
+	z-index: 50;
+	background-color: #fff;
+}
+
+.preview-image img{
+width: 100%;
+height: 100%;
+z-index: 60;
 }
