--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -479,9 +479,10 @@ figcaption {
 	margin-top: 46px;
 	display: flex;
 	flex-direction: row;
-	width: 70%;
+	width: 80%;
 	flex-wrap: wrap;
-	height: 400px;
+	height: 60%;
+	overflow-y: scroll;
 	justify-content: space-between;
 }
 
@@ -493,6 +494,9 @@ figcaption {
 .element-modal {
 	position: relative;
 	height: 120px;
+	margin-left: 5px;
+	margin-right: 5px;
+	margin-top: 12px;
 }
 
 .modal-container {
@@ -765,4 +769,14 @@ figcaption {
 width: 100%;
 height: 100%;
 z-index: 60;
+}
+
+.msg-error{
+	color:red;
+	margin-top: 20px;
+}
+
+.selectcategory{
+	font-family: 'Work Sans';
+	font-size: 10px;
 }
